"Finalisation de la partie contact

--- a/index.html
+++ b/index.html
@@ -43,17 +43,87 @@
             <div class="left">
                 <label for="1">1</label>
                 <progress id="bar" max="100" value="70">70%</progress>
+            </div>
         </section>
         <section id="Portfolio" class="portfolio">
 
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
         <section id="Contact" class="contact">
             <form action="">
-               
+                <div class="leftI">
+
+                    <ul>
+                        <li>
+                            <label for="nom">Nom*</label>
+                            <input type="text" id="nom" name="nomDeFamille" required>
+
+                            <label for="prenom">Prenom</label>
+                            <input type="text" id="prenom" name="prenomUSer">
+                        </li>
+                        <li>
+                            <label for="mail">E-mail*</label>
+                            <input type="email" id="mail" name="email" required>
+
+                            <label for="phone">Telephone</label>
+                            <input type="tel" id="phone" name="Telephone">
+                        </li>
+                        <div class="objet">
+                            <li>
+                                <label for="subjet">Objet*</label>
+                                <input type="text" id="subjet" name="objet" required>
+                            </li>
+                        </div>
+                        <li>
+                            <label for="message">Message*</label>
+                            <textarea name="message" id="message" cols="63" rows="8" required></textarea>
+                        </li>
+                        <div class="champ">
+                            <p>*Champ obligatoire</p>
+                        </div>
+                        <div class="submit">
+                            <li>
+                                <input type="submit" value="Envoyer">
+                            </li>
+                        </div>
+
+                    </ul>
+
+
+
+
+                </div>
+                <div class="rightI">
+                    <div>
+                    <article class="mail">
+                        <img src="https://icons.veryicon.com/png/o/internet--web/billion-square-cloud/mail-213.png" alt="">
+                        <a href="mailto:m.sane1822@gmail.com">m.sane1822@gmail.com</a>
+                    </article>
+                    <article class="phone">
+                        <img src="https://cdn-icons-png.flaticon.com/512/455/455705.png" alt="">
+                        <a href="tel:+33605673736">0605673736</a>
+                    </article>
+                    <article class="adresse">
+                        <img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/home_circle_icon_137496.png" alt="">
+                        <a href="https://maps.app.goo.gl/6x1T3J29HSa3kYXC8">13016 Marseille</a>
+                    </article>
+                </div>
+            </div>
             </form>
 
         </section>
-    </div>
+
 </body>
 
 </html>
